# ruci

./: Cargo.toml  README.md  build.rs  etc_config_ruci
.cargo/: config.toml
src/: main.rs  uci.rs
src/control/: control_uci.rs  mod.rs  uci.rs
src/controller/: info.rs  login.rs  mod.rs
src/provider/: mod.rs  password.rs  settings.rs
src/service/: mod.rs  session.rs
static/: advanced.html  framework.html  internet.html  intranet.html  login.html  status.html  system.html  wireless.html
static/css/: framework.css  generic.css  login.css
static/scripts/: advanced.js  framework.js  generic.js  internet.js  intranet.js  login.js  status.js  system.js  wireless.js
