# @file
#
# Main package configuration of Rust-UCI(RUCI).
# SPDX-License-Identifier: WTFPL

[package]
name = "ruci"
version = "0.1.0"
edition = "2021"

[dependencies]
cgi = "0.6.0"
rust-uci = { git = 'https://github.com/East-China-Gold-Medal/rust-uci',optional = true}
lazy_static = "1.5.0"
shadow = "0.0.1"
pwhash = "1.0.0"
serde_json = "1.0.122"
http = "0.2.12"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
regex = "1.10.6"

[build-dependencies]
syn = "2.0.72"
regex = "1.10.5"
string-builder = "0.2.0"

[features]
default = ["settings_provider_uci"]
settings_provider_uci = ["dep:rust-uci"]
